--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <title>React App</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Rosario:wght@400;500;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
